@@ -1,5 +1,7 @@
 DATE       AUTHOR       CHANGE
 ---------- --------     -----------------------------------------------------------
+2002-05-09 allenb       Configure and make now make link in instlinks instead
+                        of copying all the headers over.
 2002-05-09 allenb       Added OpenSG conversion functions.
 2002-03-20 subatomic    Added Coord and all ops, gens, converts, compares.
 2002-03-20 nonchocoboy  Added overloaded operator<< functions.
